plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.example.offlinepaymentsystem'
    compileSdk 36

    defaultConfig {
        applicationId "com.example.offlinepaymentsystem"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    buildFeatures {
        viewBinding = false
    }

    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0']
        }
    }
}

dependencies {

    //Para biometría
    implementation 'androidx.biometric:biometric:1.2.0-alpha05'

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout

    // ===== Lifecycle & ViewModel =====
    implementation libs.lifecycle.viewmodel
    implementation libs.lifecycle.livedata
    implementation libs.lifecycle.runtime

    // ===== Room Database =====
    implementation libs.room.runtime
    annotationProcessor libs.room.compiler

    // ===== Web3j =====
    implementation 'org.web3j:core:4.9.8'

    // ===== ZXing para QR =====
    implementation libs.zxing.android.embedded
    implementation libs.zxing.core

    // ===== Gson =====
    implementation libs.gson

    // ===== OkHttp =====
    implementation libs.okhttp

    // ===== Security =====
    implementation libs.security.crypto

    // ===== Testing =====
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}